--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-crud-generator",
+  "name": "express-crud-auto",
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
