--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "express-crud-auto",
-  "version": "1.0.4",
+  "name": "express-crud-gen",
+  "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "express","mysql"
+  ],
   "author": "",
   "license": "ISC",
   "description": "",
